--- a/Musique/musiques.css
+++ b/Musique/musiques.css
@@ -61,3 +61,10 @@
   background-color: #f0f0f0;
 }
 
+.accordion-content li {
+  list-style-type: none;
+}
+
+.accordion-content li:hover {
+  background-color: #f0f0f0;
+}
