--- a/Musique/musiques.css
+++ b/Musique/musiques.css
@@ -61,6 +61,10 @@
   background-color: #f0f0f0;
 }
 
+.accordion-content li a {
+  display: block;
+}
+
 .accordion-content li {
   list-style-type: none;
 }
